Inconsistent Color management behavior for textures between Solid and Eevee #58405

Closed
opened 2018-12-01 06:52:20 +01:00 by M · 9 comments

System Information
Operating system: Win7
Graphics card: GeForce GTX 1070

Blender Version
2.80
2018-11-30 22:29
0f5b53ba4d

Description
Color management, at least when it comes to textures, is inconsistent between Solid mode and Eevee, and weird stuff happens when changing Display Device in Color Management and switching back and forth between Solid and Eevee.
It's a bit confusing to describe so here's a short video to demonstrate: https://my.mixtape.moe/xvblgn.webm

Exact steps for others to reproduce the error
texturecolorissue.blend

  1. Open the attached file. You'll (probably) see that the texture displayed on the cube is washed out.
  2. Now go to Render properties, and under Color Management, change Display Device to None. Now the texture colors will look correct.
  3. Change the Display Device back to sRGB. Switch to Eevee. Note that the texture looks correct.
  4. Change the Display Device to None. The texture will now look overly dark.
  5. Switch back to Solid mode. The texture looks correct with this Display Device, like before.
  6. Switch to Eevee once again. The texture should look correct now, which contradicts what we saw in step 4.
  7. Change Display Device to sRGB, and now it will look washed out in Eevee. If you switch back to Solid mode, then back to Eevee, the colors will once again be correct.
    Also, performing certain actions seems to make the texture look correct in Eevee as well. If you get to step 5, then undo something, or change a material property, the texture will suddenly look correct.
**System Information** Operating system: Win7 Graphics card: GeForce GTX 1070 **Blender Version** 2.80 2018-11-30 22:29 0f5b53ba4dc **Description** Color management, at least when it comes to textures, is inconsistent between Solid mode and Eevee, and weird stuff happens when changing Display Device in Color Management and switching back and forth between Solid and Eevee. It's a bit confusing to describe so here's a short video to demonstrate: https://my.mixtape.moe/xvblgn.webm **Exact steps for others to reproduce the error** [texturecolorissue.blend](https://archive.blender.org/developer/F5776233/texturecolorissue.blend) 1. Open the attached file. You'll (probably) see that the texture displayed on the cube is washed out. 2. Now go to Render properties, and under Color Management, change Display Device to None. Now the texture colors will look correct. 3. Change the Display Device back to sRGB. Switch to Eevee. Note that the texture looks correct. 4. Change the Display Device to None. The texture will now look overly dark. 5. Switch back to Solid mode. The texture looks correct with this Display Device, like before. 6. Switch to Eevee once again. The texture should look correct now, which contradicts what we saw in step 4. 7. Change Display Device to sRGB, and now it will look washed out in Eevee. If you switch back to Solid mode, then back to Eevee, the colors will once again be correct. Also, performing certain actions seems to make the texture look correct in Eevee as well. If you get to step 5, then undo something, or change a material property, the texture will suddenly look correct.
Author

Added subscriber: @justastatue

Added subscriber: @justastatue
Member

Added subscribers: @fclem, @JacquesLucke

Added subscribers: @fclem, @JacquesLucke
Member

Tbh I don't know what this should look like but it seems a bit weird.

@fclem, can you take a look please?

Tbh I don't know what this should look like but it seems a bit weird. @fclem, can you take a look please?
Member

Added subscribers: @Sergey, @brecht, @lichtwerk

Added subscribers: @Sergey, @brecht, @lichtwerk
Member

Even though I still struggle with CM a bit, I would also expect textures in 3DView + Solid Shading + Flat Lighting + Texture Color to display as in the Image Editor...

adding @Sergey and @brecht here for further advice...

Even though I still struggle with CM a bit, I would also expect textures in `3DView` + `Solid Shading` + `Flat Lighting` + `Texture Color` to display as in the Image Editor... adding @Sergey and @brecht here for further advice...
Brecht Van Lommel was assigned by Sergey Sharybin 2018-12-06 12:37:20 +01:00

@brecht, i've just committed changes which i think implements what we've discussed here. Afraid, now you're the best person to answer the question whether things behave as they are designed to.

@brecht, i've just committed changes which i think implements what we've discussed here. Afraid, now you're the best person to answer the question whether things behave as they are designed to.
Member

Well (from a users perspective) as of 4c336f034e the textures still display washed out in 3DView + Solid Shading + Flat Lighting + Texture Color [but I dont know what has been discussed ;)]

Well (from a users perspective) as of 4c336f034e the textures still display washed out in `3DView` + `Solid Shading` + `Flat Lighting` + `Texture Color` [but I dont know what has been discussed ;)]

This issue was referenced by d68484a60f

This issue was referenced by d68484a60f539339db12a7eedd0ead0f116a43d5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58405
No description provided.