Fix T58405: viewport drawing issues with display device set to None.

Disabling color management this way is not very useful, but as long as the
option is there it should work correct.