source/blender/draw/engines/workbench/workbench_materials.c
@@ -259,7 +259,8 @@ void workbench_material_shgroup_uniform(
 
 	if (workbench_material_determine_color_type(wpd, material->ima, ob) == V3D_SHADING_TEXTURE_COLOR) {
 		ImBuf *ibuf = BKE_image_acquire_ibuf(material->ima, NULL, NULL);
-		const bool do_color_correction = (ibuf && (ibuf->colormanage_flag & IMB_COLORMANAGE_IS_DATA) == 0);
+		const bool do_color_correction = wpd->use_color_management &&
+		                                 (ibuf && (ibuf->colormanage_flag & IMB_COLORMANAGE_IS_DATA) == 0);
 		BKE_image_release_ibuf(material->ima, ibuf, NULL);
 		GPUTexture *tex = GPU_texture_from_blender(material->ima, NULL, GL_TEXTURE_2D, false);
 		DRW_shgroup_uniform_texture(grp, "image", tex);
